add mCipher model and link to m-cipher component. also add css/scss styling to mcipher

--- a/src/app/m-cipher/m-cipher.component.html
+++ b/src/app/m-cipher/m-cipher.component.html
@@ -1,3 +1,5 @@
-<p>
-  m-cipher works!
-</p>
+<div class="formatbody">
+  <div *ngFor="let mcipher of mCiphers">
+      <h3>The English letter {{mcipher.alphabet}} corresponds to {{mcipher.musicNote}}-{{mcipher.color}} is {{mcipher.key}} and has a value of {{mcipher.gematria}}   </h3>
+  </div>
+</div>
