--- a/src/app/m-cipher/m-cipher.component.css
+++ b/src/app/m-cipher/m-cipher.component.css
@@ -5,7 +5,8 @@ body {
 .formatbody {
 
   /* black background for body */
-  padding-top: 120px;
+  padding-top: 150px;
+  padding-left: 50px;
   position: fixed;
   top: 0;
   left: 0;
