--- a/src/app/songbank/songbank.component.html
+++ b/src/app/songbank/songbank.component.html
@@ -1,3 +1,10 @@
 <div class="formatbody">
+  <br><br>
+  <div *ngFor="let song of songs" (click)="goToDetailPage(song)" class="panel panel-default">
+      <div class="panel-body">
+        <h4>Title: {{song.title}}</h4>
+      </div>
+      <br>
+  </div>
   <img src="./assets/images/songbank.jpg" alt="">
 </div>
