--- a/src/app/control-panel/control-panel.component.html
+++ b/src/app/control-panel/control-panel.component.html
@@ -1,6 +1,7 @@
 <div class="formatbody">
-  <nav class="navbar nav2">
-    <img src="./assets/images/nav2.jpg" alt="">
-  </nav>
+  <div>
+    <h3>{{songToDisplay.title}}</h3>
+    <h4>{{songToDisplay.lyrics}}</h4>
+  </div>
   <img src="./assets/images/fullAppLayout.jpg" alt="" style="margin-left: 5%; margin-top: 10%;">
 </div>
