link control panel to mcipher

--- a/src/app/control-panel/control-panel.component.html
+++ b/src/app/control-panel/control-panel.component.html
@@ -4,4 +4,6 @@
     <h4>{{songToDisplay.lyrics}}</h4>
   </div>
   <img src="./assets/images/fullAppLayout.jpg" alt="" style="margin-left: 5%; margin-top: 10%;">
+
+<app-m-cipher></app-m-cipher>
 </div>
