--- a/src/app/control-panel/control-panel.component.html
+++ b/src/app/control-panel/control-panel.component.html
@@ -1,7 +1,7 @@
 <div class="formatbody">
   <div>
-    <h3>{{songToDisplay.title}}</h3>
-    <h4>{{songToDisplay.lyrics}}</h4>
+    <h3>{{(songToDisplay | async)?.title}}</h3>
+    <h4>{{(songToDisplay | async)?.lyrics}}</h4>
   </div>
   <img src="./assets/images/fullAppLayout.jpg" alt="" style="margin-left: 5%; margin-top: 10%;">
 
