--- a/src/app/admin/admin.component.css
+++ b/src/app/admin/admin.component.css
@@ -5,7 +5,7 @@ body {
 .formatbody {
 
   /* black background for body */
-  padding-top: 150px;
+  padding-top: 250px;
   position: fixed;
   top: 0;
   left: 0;
@@ -27,6 +27,18 @@ body {
   text-align: center;
 }
 
+.marginTop {
+  margin-top: 300px;
+}
+
 .formatbody img {
   margin-left: 5%;
+}
+
+.makeBig {
+  color: black;
+  top: 50vh;
+  left: 50vw;
+  transform: translate(-50%, -50%);
+  font-size: 30px;
 }
