fix control panel css

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,12 +5,11 @@
           <button class="dropbtn"><img src="/assets/images/menuicon.jpg" alt="" style="width: 75px;"></button>
           <div class="dropdown-content">
             <a routerLink="/songbank">Main Menu</a>
-            <a routerLink="admin">Admin</a>
+            <a routerLink="/admin">Admin</a>
             <a routerLink="/">Log In</a>
-            <a routerLink="/view-card">View Card</a>
             <a routerLink="/control-panel">Edit Song</a>
-            <a routerLink="/about">FAQ</a>
-            <a routerLink="/animation">Animation</a>
+            <a routerLink="/view-card">View Card</a>
+
           </div>
         </div>
       </li>
