--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,7 +1,7 @@
 <div class="formatbody">
   <div class="panel panel-default">
     <div class="panel-heading">
-      <h3 class="panel-title">Add New Song to Bank</h3>
+      <h3 class="panel-title">Create New Song</h3>
     </div>
     <div class="panel-body">
       <div>
